--- a/languages/mainwp-de_DE.po
+++ b/languages/mainwp-de_DE.po
@@ -1339,7 +1339,7 @@ msgstr "Plugins"
 #: page/MainWPPlugins.page.php:1194
 #@ mainwp
 msgid "Manage Plugins"
-msgstr "Verwalte Plaugins"
+msgstr "Verwalte Plugins"
 
 #: page/MainWPPlugins.page.php:48
 #: page/MainWPPlugins.page.php:78
