--- a/languages/mainwp-fr_FR.po
+++ b/languages/mainwp-fr_FR.po
@@ -1325,31 +1325,31 @@ msgstr "Cliquer %1here%2 pour voir la réponse depuis le site client."
 msgid ""
 "This site can not be reached! Please use the Test Connection feature and see "
 "if the positive response will be returned. For additional help, please "
-"review this <a href=\"https://kb.mainwp.com/docs/potential-issues/"
+"review this <a href=\"https://mainwp.com/kb/potential-issues/"
 "\">Knowledgebase document</a>, and if you still have issues, please let us "
-"know in the <a href=\"https://managers.mainwp.com/c/community-"
+"know in the <a href=\"https://community.mainwp.com/c/community-"
 "support/5\">MainWP Community</a>."
 msgstr ""
 "Ce site est inaccessible ! Veuillez utiliser la fonction Tester la connexion "
 "et voir si une réponse positive est renvoyée. Pour obtenir de l’aide "
-"supplémentaire, consulter <a href=\"https://kb.mainwp.com/docs/potential-"
+"supplémentaire, consulter <a href=\"https://mainwp.com/kb/potential-"
 "issues/\">ce document de la base de connaissances</a> et, si vous avez "
 "toujours des problèmes, veuillez nous en informer dans la <a href=\"https://"
-"managers.mainwp.com/c/community-support/5\">communauté MainWP</a>."
+"community.mainwp.com/c/community-support/5\">communauté MainWP</a>."
 
 #: assets/js/mainwp.js:1698
 msgid ""
 "Undefined error occurred. Please try again. If the issue does not resolve, "
-"please review this <a href=\"https://kb.mainwp.com/docs/potential-issues/"
+"please review this <a href=\"https://mainwp.com/kb/potential-issues/"
 "\">Knowledgebase document</a>, and if you still have issues, please let us "
-"know in the <a href=\"https://managers.mainwp.com/c/community-"
+"know in the <a href=\"https://community.mainwp.com/c/community-"
 "support/5\">MainWP Community</a>."
 msgstr ""
 "Une erreur inconnue s’est produite. Veuillez réessayer. Si le problème ne se "
-"résout pas, consulter <a href=\"https://kb.mainwp.com/docs/potential-issues/"
+"résout pas, consulter <a href=\"https://mainwp.com/kb/potential-issues/"
 "\">ce document de la base de connaissances</a>, et si vous rencontrez "
 "toujours des problèmes, veuillez nous en informer via la <a href=\"https://"
-"managers.mainwp.com/c/community-support/5\">communauté MainWP</a>."
+"community.mainwp.com/c/community-support/5\">communauté MainWP</a>."
 
 #: assets/js/mainwp.js:1700
 msgid "Error detected: "
