Merge: new layout

--- a/languages/mainwp-de_DE.po
+++ b/languages/mainwp-de_DE.po
@@ -10248,7 +10248,7 @@ msgid "MainWP"
 msgstr "Haupt WP"
 
 #: modules/cost-tracker/ui/js/cost-tracker.js:67
-msgid "Are you sure."
+msgid "Are you sure?"
 msgstr "Sind Sie sicher?"
 
 #: modules/cost-tracker/widgets/widget-cost-tracker-category-totals.php:58
