--- a/languages/mainwp-fr_FR.po
+++ b/languages/mainwp-fr_FR.po
@@ -10155,7 +10155,7 @@ msgid "MainWP"
 msgstr "MainWP"
 
 #: modules/cost-tracker/ui/js/cost-tracker.js:67
-msgid "Are you sure."
+msgid "Are you sure?"
 msgstr "Êtes vous sûr."
 
 #: modules/cost-tracker/widgets/widget-cost-tracker-category-totals.php:58
