--- a/languages/mainwp-pt_BR.po
+++ b/languages/mainwp-pt_BR.po
@@ -10089,7 +10089,7 @@ msgid "MainWP"
 msgstr "MainWP"
 
 #: modules/cost-tracker/ui/js/cost-tracker.js:67
-msgid "Are you sure."
+msgid "Are you sure?"
 msgstr "Tem certeza?"
 
 #: modules/cost-tracker/widgets/widget-cost-tracker-category-totals.php:58
